--- a/src/main/resources/templates/producto/modifica.html
+++ b/src/main/resources/templates/producto/modifica.html
@@ -7,9 +7,9 @@
     <body>
         <header th:replace="~{layout/plantilla :: header}"></header>
         
-        <section th:replace="~{categoria/fragmentos :: botonesAgregar}"></section>
-        <section th:replace="~{categoria/fragmentos :: agregarCategoria}"></section>
-        <section th:replace="~{categoria/fragmentos :: listadoCategorias}"></section>
+        
+        <section th:replace="~{producto/fragmentos :: editarProducto}"></section>
+       
         
         <footer th:replace="~{layout/plantilla :: footer}"></footer>
     </body>
