--- a/src/main/resources/templates/producto/fragmentos.html
+++ b/src/main/resources/templates/producto/fragmentos.html
@@ -39,48 +39,39 @@
                         <form th:action="@{/producto/guardar}" th:object="${producto}"
                               method="POST" class="was-validated" enctype="multipart/form-data">
                             <div class="modal-body">
-
                                 <div class="mb-3">
                                     <label for="categoria">[[#{producto.categoria}]]</label>
-                                    <select class="form-select" aria-label="Default select example"
-                                            name="idCategoria" required="true">
-                                        <option th:each="categoria : ${categorias}" 
+                                    <select class="form-select" aria-label="Default select example" 
+                                            name="categoria.idCategoria" required="true">
+                                        <option th:each="categoria: ${categorias}"
                                                 th:value="${categoria.idCategoria}">[[${categoria.descripcion}]]</option>
                                     </select>
                                 </div>
-
-                                <div class="mb-3">
-                                    <label for="descripcion">[[#{producto.descripcion}]]</label>
-                                    <input type="text" class="form-control" name="descripcion" required="true"/>
-                                </div>
-
                                 <div class="mb-3">
                                     <label for="detalle">[[#{producto.detalle}]]</label>
                                     <textarea class="form-control" name="detalle" rows="3"></textarea>
                                 </div>
-
                                 <div class="mb-3">
                                     <label for="precio">[[#{producto.precio}]]</label>
                                     <input type="number" class="form-control" name="precio" required="true"/>
                                 </div>
-
                                 <div class="mb-3">
                                     <label for="existencias">[[#{producto.existencias}]]</label>
                                     <input type="number" class="form-control" name="existencias" required="true"/>
                                 </div>
-
-
+                                <div class="mb-3">
+                                    <label for="descripcion">[[#{producto.descripcion}]]</label>
+                                    <input type="text" class="form-control" name="descripcion" required="true"/>
+                                </div>
                                 <div class="mb-3">
                                     <label for="activo">[[#{producto.activo}]]</label>
                                     <input class="form-check-input" type="checkbox" name="activo" id="activo"/>
                                 </div>
-
                                 <div class="mb-3">
                                     <label for="imagen">[[#{producto.imagen}]]</label>
                                     <input class="form-control" type="file" name="imagenFile" onchange="readURL(this);"/>
                                     <img id="blah" src="#" alt="your image" height="200"/>
                                 </div>
-
                             </div>
                             <div class="modal-footer">
                                 <button class="btn btn-primary" type="submit">Guardar</button>
@@ -101,7 +92,7 @@
                                 <h4>[[#{producto.listado}]]</h4>
                             </div>
                             <div th:if="${productos != null and !productos.empty}">
-                                <table class="table table-striped table-hover">
+                               <table class="table table-striped table-hover">
                                     <thead class="table-dark">
                                         <tr><th>#</th>
                                             <th>[[#{producto.descripcion}]]</th>
@@ -120,7 +111,7 @@
                                             <td>[[${producto.existencias}]]</td>
                                             <td>[[${producto.precio*producto.existencias}]]</td>
                                             <td th:text="${producto.activo} ? 'Activa' : 'Inactiva'" />
-                                            <td>[[${producto.categoria.descripcion}]]</td>
+                                            <th>[[${producto.categoria.descripcion}]]</th>
                                             <td><a th:href="@{/producto/eliminar/}+${producto.idProducto}"
                                                    class="btn btn-danger">
                                                     <i class="fas fa-trash"></i> [[#{accion.eliminar}]]</a>
@@ -128,7 +119,7 @@
                                                    class="btn btn-success">
                                                     <i class="fas fa-pencil"></i> [[#{accion.actualizar}]]</a></td></tr>
                                     </tbody>
-                                </table>
+                                </table>
                             </div>
                             <div class="text-center p-2" th:if="${productos == null or productos.empty}">
                                 <span>[[#{lista.vacia}]]</span>
@@ -168,39 +159,39 @@
                                             <div class="card-header">
                                                 <h4>[[#{accion.actualizar}]]</h4>
                                             </div>
-
-                                            <div class="mb-3">
-                                                <label for="categoria">[[#{producto.categoria}]]</label>
-                                                <select class="form-select" aria-label="Default select example"
-                                                        name="idCategoria" required="true">
-                                                    <option th:each="categoria : ${categorias}" 
-                                                            th:value="${categoria.idCategoria}">[[${categoria.descripcion}]]</option>
-                                                </select>
-                                            </div>
-
                                             <div class="card-body">
+                                                <div class="mb-3">
+                                                    <label for="categoria">[[#{producto.categoria}]]</label>
+                                                    <select class="form-select" aria-label="Default select example"
+                                                            name="categoria.idCategoria" th:field="*{categoria.idCategoria}"
+                                                            required="true">
+                                                        <option th:each="categoria: ${categorias}"
+                                                                th:value="${categoria.idCategoria}">[[${categoria.descripcion}]]</option>
+                                                    </select>
+                                                </div>
                                                 <div class="mb-3">
                                                     <label for="descripcion">[[#{producto.descripcion}]]</label>
                                                     <input type="text" class="form-control" 
                                                            name="descripcion" th:field="*{descripcion}"
                                                            required="true">
                                                 </div>
-
                                                 <div class="mb-3">
                                                     <label for="detalle">[[#{producto.detalle}]]</label>
-                                                    <textarea class="form-control" name="detalle" th:field="*{detalle}" rows="3"></textarea>
+                                                    <input type="text" class="form-control" 
+                                                           name="detalle" th:field="*{detalle}">
                                                 </div>
-
                                                 <div class="mb-3">
                                                     <label for="precio">[[#{producto.precio}]]</label>
-                                                    <input type="number" class="form-control" name="precio" th:field="*{precio}" required="true"/>
+                                                    <input type="number" class="form-control" 
+                                                           name="precio" th:field="*{precio}"
+                                                           required="true">
                                                 </div>
-
                                                 <div class="mb-3">
                                                     <label for="existencias">[[#{producto.existencias}]]</label>
-                                                    <input type="number" class="form-control" name="existencias" th:field="*{existencias}" required="true"/>
+                                                    <input type="number" class="form-control" 
+                                                           name="existencias" th:field="*{existencias}"
+                                                           required="true">
                                                 </div>
-
                                                 <div class="mb-3">
                                                     <label for="activo">[[#{producto.activo}]]</label>
                                                     <input class="form-check-input" 
@@ -248,5 +239,5 @@
                 </div>
             </div>
         </section>
-    </body>
+    </body>
 </html>
