--- a/src/main/resources/templates/pruebas/listado.html
+++ b/src/main/resources/templates/pruebas/listado.html
@@ -7,9 +7,8 @@
     <body>
         <header th:replace="~{layout/plantilla :: header}"></header>
         
-        <section th:replace="~{producto/fragmentos :: botonesAgregar}"></section>
-        <section th:replace="~{producto/fragmentos :: agregarProducto}"></section>
-        <section th:replace="~{producto/fragmentos :: listadoProductos}"></section>
+        <section th:replace="~{pruebas/fragmentos :: categoriasTabs}"></section>
+        <section th:replace="~{pruebas/fragmentos :: listadoProductos}"></section>
         
         <footer th:replace="~{layout/plantilla :: footer}"></footer>
     </body>
