--- a/src/main/resources/templates/layout/plantilla.html
+++ b/src/main/resources/templates/layout/plantilla.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:th="http://www.thymeleaf.org">
+      xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity6">
+
     <head th:fragment="head">
         <title>TechShop</title>
         <meta charset="UTF-8"/>
@@ -12,8 +14,8 @@
         <script th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
     </head>
     <body>
-        
-         <header th:fragment="header" class="header">
+
+        <header th:fragment="header" class="header">
             <nav class="navbar navbar-expand-sm navbar-dark bg-dark p-0">
                 <div class="container">
                     <a th:href="@{/}" class="navbar-brand">[[#{aplicacion.titulo}]]</a>
@@ -21,10 +23,10 @@
                         <span class="navbar-toggler-icon"></span>
                     </button>
                     <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
-                        <ul class="navbar-nav">
+                        <ul class="navbar-nav" sec:authorize='hasRole("ROLE_VENDEDOR")'>
                             <li class="nav-item px-2"><a class="nav-link" th:href="@{/categoria/listado}">[[#{plantilla.categorias}]]</a></li>
                             <li class="nav-item px-2"><a class="nav-link" th:href="@{/producto/listado}">[[#{plantilla.productos}]]</a></li>                           
-                             <li class="nav-item dropdown">
+                            <li class="nav-item dropdown" sec:authorize='hasRole("ROLE_ADMIN")'>
                                 <a class="nav-link dropdown-toggle" 
                                    data-bs-toggle="dropdown" 
                                    href="#" 
@@ -46,6 +48,32 @@
                                 </ul>
                             </li>
                         </ul>
+
+                        <ul class="navbar-nav" sec:authorize="!isAuthenticated()">
+                            <li class="nav-item px-2">
+                                <a class="nav-menu link nav-link"
+                                   th:href="@{/login}">
+                                    <i class="fas fa-sign-in-alt"></i>   
+                                </a>
+                            </li>
+                        </ul>
+
+                        <ul class="navbar-nav" sec:authorize="isAuthenticated()">
+                            <li class="nav-item text-white my-auto">
+                                <i class="fas fa-user"></i>
+                                <span sec:authentication="name">Bob</span>
+                            </li>
+                            <li class="nav-item my-auto">
+                                <form method="post"
+                                      th:action="@{/logout}">
+                                    <button class="btn btn-dark">
+                                        <i class="fas fa-sign-out-alt"></i> 
+                                    </button>
+                                </form>
+                            </li>
+                        </ul>
+
+
                     </div>
                 </div>
             </nav>
@@ -59,14 +87,14 @@
                 </div>
             </section>
         </header>
-        
+
         <footer th:fragment="footer"
                 class="bg-info text-white mt-5 p-2">
             <div class="container">
                 <div class="col lead text-center">
-            <p>&COPY [[#{plantilla.derechos}]] </p>
-            </div>
+                    <p>&COPY [[#{plantilla.derechos}]] </p>
                 </div>
+            </div>
         </footer> 
     </body>
 </html>
