--- a/src/main/resources/templates/categoria/listado.html
+++ b/src/main/resources/templates/categoria/listado.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:th="http://www.thymeleaf.org"
-    xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity6">
+      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity6">
     <head th:replace="~{layout/plantilla :: head}">
-
+        <title>TechShop</title>
     </head>
     <body>
         <header th:replace="~{layout/plantilla :: header}"></header>
@@ -11,7 +11,8 @@
         <section th:replace="~{categoria/fragmentos :: botonesAgregar}"></section>
         <section th:replace="~{categoria/fragmentos :: agregarCategoria}"></section>
         <section th:replace="~{categoria/fragmentos :: listadoCategorias}"></section>
-
+        
         <footer th:replace="~{layout/plantilla :: footer}"></footer>
+
     </body>
 </html>
