--- a/src/main/resources/templates/layout/plantilla.html
+++ b/src/main/resources/templates/layout/plantilla.html
@@ -23,21 +23,21 @@
                         <span class="navbar-toggler-icon"></span>
                     </button>
                     <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
-                        <ul class="navbar-nav" sec:authorize='hasRole("ROLE_VENDEDOR")'>
+                        <ul class="navbar-nav" sec:authorize="hasRole('ROLE_VENDEDOR')">
                             <li class="nav-item px-2"><a class="nav-link" th:href="@{/categoria/listado}">[[#{plantilla.categorias}]]</a></li>
                             <li class="nav-item px-2"><a class="nav-link" th:href="@{/producto/listado}">[[#{plantilla.productos}]]</a></li>                           
-                            <li class="nav-item dropdown" sec:authorize='hasRole("ROLE_ADMIN")'>
+                            <li class="nav-item dropdown"  sec:authorize="hasRole('ROLE_ADMIN')">
                                 <a class="nav-link dropdown-toggle" 
                                    data-bs-toggle="dropdown" 
                                    href="#" 
                                    role="button" 
                                    aria-expanded="false">[[#{plantilla.pruebas}]]</a>
                                 <ul class="dropdown-menu dropdown-menu-dark">
-                                    <li><a class="dropdown-item"  th:href="@{/pruebas/listado}">[[#{plantilla.asociaciones}]]</a></li>
-                                    <li><a class="dropdown-item"  th:href="@{/pruebas/listado2}">[[#{plantilla.consultas}]]</a></li>
+                                    <li><a class="dropdown-item" th:href="@{/usuario/listado}">[[#{plantilla.usuarios}]]</a></li>
+                                    <li><a class="dropdown-item" th:href="@{/pruebas/listado}">[[#{plantilla.asociaciones}]]</a></li>
+                                    <li><a class="dropdown-item" th:href="@{/pruebas/listado2}">[[#{plantilla.consultas}]]</a></li>                                    
                                 </ul>
                             </li>
-                            <li class="nav-item px-2"><a class="nav-link" th:href="@{/usuario/listado}">[[#{plantilla.usuarios}]]</a></li>
                         </ul>
                         <ul class="navbar-nav">
                             <li class="nav-item dropdown">
@@ -50,29 +50,32 @@
                         </ul>
 
                         <ul class="navbar-nav" sec:authorize="!isAuthenticated()">
-                            <li class="nav-item px-2">
-                                <a class="nav-menu link nav-link"
-                                   th:href="@{/login}">
-                                    <i class="fas fa-sign-in-alt"></i>   
+                            <li class="nav-item">
+                                <a class="nav-link" th:href="@{/login}">
+                                    <i class="fas fa-sign-in-alt"></i>
                                 </a>
                             </li>
                         </ul>
 
                         <ul class="navbar-nav" sec:authorize="isAuthenticated()">
                             <li class="nav-item text-white my-auto">
-                                <i class="fas fa-user"></i>
-                                <span sec:authentication="name">Bob</span>
+                                
+                                <img th:src='@{${session.imagenUsuario}}'
+                                     alt='Imagen del usuario'
+                                     height="40"
+                                     class='rounded-circle'/>
+                                
+                                <span sec:authentication='name'>Bob</span>
                             </li>
-                            <li class="nav-item my-auto">
+                            <li class="nav-item">
                                 <form method="post"
                                       th:action="@{/logout}">
-                                    <button class="btn btn-dark">
-                                        <i class="fas fa-sign-out-alt"></i> 
+                                    <button class='btn btn-dark'>
+                                        <i class="fas fa-sign-out-alt"></i>
                                     </button>
                                 </form>
                             </li>
                         </ul>
-
 
                     </div>
                 </div>
@@ -91,10 +94,10 @@
         <footer th:fragment="footer"
                 class="bg-info text-white mt-5 p-2">
             <div class="container">
-                <div class="col lead text-center">
-                    <p>&COPY [[#{plantilla.derechos}]] </p>
+                <div class="col">
+                    <p class="lead text-center">&COPY[[#{plantilla.derechos}]]</p>
                 </div>
             </div>
-        </footer> 
+        </footer>
     </body>
 </html>
