--- a/src/main/resources/templates/pruebas/fragmentos.html
+++ b/src/main/resources/templates/pruebas/fragmentos.html
@@ -6,27 +6,25 @@
         <title>TechShop</title>
     </head>
     <body>
-         
-          <!-- 1 Sección principal para mostrar la informaccion de las categorias -->
-        <section th:fragment="categoriasTabs" id="categorias">
-            <div class="row py-4">
-                <ul class="nav nav-tabs">
-                    <li class="nav-item">
-                        <a class="nav-link" 
-                           aria-current="page" 
-                           href="/pruebas/listado"
-                           >[[#{pruebas.todas}]]</a>
-                    </li>
-                    <li th:each="categoria : ${categorias}" class="nav-item">
-                        <a class="nav-link" 
-                           th:href="@{/pruebas/listado/}+${categoria.idCategoria}"
-                           >[[${categoria.descripcion}]]</a>
-                    </li>                    
-                </ul>
+        <!-- 1 Sección para crear el boton de agregar... llamará a una ventana modal-->
+        <section th:fragment="categoriaTabs" class="py-4 mb-4 bg-light">
+            <div class="container">
+                <div class="row">
+                    <ul class="nav nav-tabs">
+                        <li class="nav-item">
+                            <a class="nav-link" href="/pruebas/listado">Todas</a>
+                        </li>
+                        <li class="nav-item" th:each="categoria : ${categorias}">
+                            <a class="nav-link" th:href="@{/pruebas/listado/}+${categoria.idCategoria}">[[${categoria.descripcion}]]</a>
+                        </li>
+
+                    </ul>
+                </div>
             </div>
         </section>
-        
-        <!-- 3 Sección principal para mostrar la informaccion de la entidad producto -->
+
+
+        <!-- 2 Sección principal para mostrar la informaccion de la entidad producto -->
         <section th:fragment="listadoProductos" id="productos">
             <div class="container">
                 <div class="row">
@@ -36,7 +34,7 @@
                                 <h4>[[#{producto.listado}]]</h4>
                             </div>
                             <div th:if="${productos != null and !productos.empty}">
-                               <table class="table table-striped table-hover">
+                                <table class="table table-striped table-hover">
                                     <thead class="table-dark">
                                         <tr><th>#</th>
                                             <th>[[#{producto.descripcion}]]</th>
@@ -45,6 +43,7 @@
                                             <th>[[#{producto.total}]]</th>
                                             <th>[[#{producto.activo}]]</th>
                                             <th>[[#{producto.categoria}]]</th>
+
                                             <th></th></tr>
                                     </thead>
                                     <tbody>
@@ -55,7 +54,7 @@
                                             <td>[[${producto.existencias}]]</td>
                                             <td>[[${producto.precio*producto.existencias}]]</td>
                                             <td th:text="${producto.activo} ? 'Activa' : 'Inactiva'" />
-                                            <th>[[${producto.categoria.descripcion}]]</th>
+                                            <td>[[${producto.categoria.descripcion}]]</td>
                                             <td><a th:href="@{/producto/eliminar/}+${producto.idProducto}"
                                                    class="btn btn-danger">
                                                     <i class="fas fa-trash"></i> [[#{accion.eliminar}]]</a>
@@ -63,7 +62,7 @@
                                                    class="btn btn-success">
                                                     <i class="fas fa-pencil"></i> [[#{accion.actualizar}]]</a></td></tr>
                                     </tbody>
-                                </table>
+                                </table>
                             </div>
                             <div class="text-center p-2" th:if="${productos == null or productos.empty}">
                                 <span>[[#{lista.vacia}]]</span>
@@ -81,7 +80,7 @@
                 </div>
             </div>
         </section>
-        
+
         <!-- 3 Sección para crear los filtros -->
         <section th:fragment="filtros" class="bg-light">
             <div class="row py-2">
@@ -112,8 +111,8 @@
                         </div>
                     </form>
                 </div>   
-                
-                  <div class="col-md-3">
+
+                <div class="col-md-3">
                     <form method="POST" th:action="@{/pruebas/query2}" 
                           class="was-validated">
                         <div class="card">                            
@@ -138,7 +137,7 @@
                             </div>
                         </div>
                     </form>
-                </div>  
+                </div>
                 
                 <div class="col-md-3">
                     <form method="POST" th:action="@{/pruebas/query3}" 
@@ -165,9 +164,11 @@
                             </div>
                         </div>
                     </form>
-                </div>  
+                </div>
+                
             </div>
         </section> 
-        
+
+
     </body>
 </html>
