--- a/src/main/resources/templates/usuario/modifica.html
+++ b/src/main/resources/templates/usuario/modifica.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:th="http://www.thymeleaf.org">
+      xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity6">
     <head th:replace="~{layout/plantilla :: head}">
         <title>TechShop</title>
-       </head>
+    </head>
     <body>
         <header th:replace="~{layout/plantilla :: header}"></header>
+
+        <section th:replace="~{usuario/fragmentos :: editarUsuario}"></section>
+
         <footer th:replace="~{layout/plantilla :: footer}"></footer>
 
     </body>
