--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,9 +3,10 @@
       xmlns:th="http://www.thymeleaf.org">
     <head th:replace="~{layout/plantilla :: head}">
         <title>TechShop</title>
-       </head>
+    </head>
     <body>
         <header th:replace="~{layout/plantilla :: header}"></header>
+        <section th:replace="~{carrito/fragmentos :: listadoProductos}"></section>
         <footer th:replace="~{layout/plantilla :: footer}"></footer>
 
     </body>
