Presentacion Final Proyecto Botero :D

--- a/src/main/resources/templates/reportes/principal.html
+++ b/src/main/resources/templates/reportes/principal.html
@@ -26,16 +26,16 @@
                         Reporte Usuarios
                     </div>
                     <div class="card-body">
-                        <a th:href="@{/reportes/bbusuarios?tipo=vPdf}" class="btn btn-primary">
+                        <a th:href="@{/reportes/usuariosV?tipo=vPdf}" class="btn btn-primary">
                             <i class='fas fa-eye'></i><i class='fas fa-file-pdf'></i>
                         </a>
-                        <a th:href="@{/reportes/bbusuarios?tipo=Pdf}" class="btn btn-success">
+                        <a th:href="@{/reportes/usuariosV?tipo=Pdf}" class="btn btn-success">
                             <i class='fas fa-download'></i><i class='fas fa-file-pdf'></i>
                         </a>
-                        <a th:href="@{/reportes/bbusuarios?tipo=Xls}" class="btn btn-warning">
+                        <a th:href="@{/reportes/usuariosV?tipo=Xls}" class="btn btn-warning">
                             <i class='fas fa-download'></i><i class='fas fa-file-excel'></i>
                         </a>
-                        <a th:href="@{/reportes/bbusuarios?tipo=Csv}" class="btn btn-danger">
+                        <a th:href="@{/reportes/usuariosV?tipo=Csv}" class="btn btn-danger">
                             <i class='fas fa-download'></i><i class='fas fa-file-csv'></i>
                         </a>
                     </div>
@@ -47,16 +47,16 @@
                             Reporte Productos
                         </div>
                         <div class="card-body">
-                            <a th:href="@{/reportes/bbproductos?tipo=vPdf}" class="btn btn-primary">
+                            <a th:href="@{/reportes/productosV?tipo=vPdf}" class="btn btn-primary">
                                 <i class='fas fa-eye'></i><i class='fas fa-file-pdf'></i>
                             </a>
-                            <a th:href="@{/reportes/bbproductos?tipo=Pdf}" class="btn btn-success">
+                            <a th:href="@{/reportes/productosV?tipo=Pdf}" class="btn btn-success">
                                 <i class='fas fa-download'></i><i class='fas fa-file-pdf'></i>
                             </a>
-                            <a th:href="@{/reportes/bbproductos?tipo=Xls}" class="btn btn-warning">
+                            <a th:href="@{/reportes/productosV?tipo=Xls}" class="btn btn-warning">
                                 <i class='fas fa-download'></i><i class='fas fa-file-excel'></i>
                             </a>
-                            <a th:href="@{/reportes/bbproductos?tipo=Csv}" class="btn btn-danger">
+                            <a th:href="@{/reportes/productosV?tipo=Csv}" class="btn btn-danger">
                                 <i class='fas fa-download'></i><i class='fas fa-file-csv'></i>
                             </a>
                         </div>
